Changes in Caudium 1.2.30 since 1.2.26
--------------------------------------
- Added Mailform module from Caudium 1.3 tree
   (Xavier Beaudouin)
- Added Bill Welliver's Mailit module from Caudium 1.3 tree
   (Xavier Beaudouin)
- Added ability to add a link to a stylesheet in Ultralog module.
   (James Tyson)
- Fixed a bug in htaccess module that make it ignoring .htaccess files.
   (Xavier Beaudouin)
- Added robot.txt generator from Roxen 2.x/3.x and updated it a bit.
   (Xavier Beaudouin)
- Removed ifdef ADT.Table on debuginformation.pike since it exist on pike 7.0+
   (Xavier Beaudouin)
- Added Robot Trap from Caudium 1.3 tree.
   (Xavier Beaudouin)
- MIME.Decode in base_server/wizard.pike is now inside a catch() to avoid
  break in case of partial / malformed base64 data given to the webserver.
   (Xavier Beaudouin)
- Added a catch() into MIME.Message used in multipart/form-data handler in
  http.pike and http2.pike to avoid locks into Caudium when malformed data
  comes into webserver.
   (Xavier Beaudouin)
- Avoid use -O2 on FreeBSD Alpha
   (Xavier Beaudouin)
- Created new version of uniscript that uses FastCGI to communicate with
  the script interpreter, hopefully providing better performance.
   (Bill Welliver)
- Updated uniscript to inherit CGI rather than copy it.
   (Xavier Beaudouin)
- Added a check in CGI module (and the all modules that inherits it) that
  ask for a mountpoint that ends with and '/' at the end to avoid potential
  security problems (eg list of files directories) (SF bug #713835).
   (Xavier Beaudouin)
- Fixes in responses given to FTP client in the ftp protocol. Mostly because
  Opera don't like it too mutch. (SF bug #560771)
    (Xavier Beaudouin)

Changes in Caudium 1.2.26 since 1.2.24
--------------------------------------
- Fix a bug in autoconf script that avoid autoconf to detect pike when 
  configure script is executed under FreeBSD ports.
- Fix a bug in autoconf that prevented Caudium to compile if $CPPFLAGS was set