@@ -1,5 +1,10 @@
 Changes in Caudium 1.2.30 since 1.2.26
 --------------------------------------
+- Backported Caudium 1.3 global configuration option to force load of all 
+  Caudium modules at startup by adding an optional define in performance.h.
+  Start Caudium with -DLOAD_CONFIGS_STARTUP or add #define LOAD_CONFIGS_STARTUP
+  performance.h or in config.h enable this functionality.
+   (Xavier Beaudouin)
 - Added Mailform module from Caudium 1.3 tree
    (Xavier Beaudouin)
 - Added Bill Welliver's Mailit module from Caudium 1.3 tree
